Primer commit en henry

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
     Comentarios: "aqui"<br/>
     Los comentarios no se pueden anidar.</p>
     <h2>Sección CDATA</h2>
-    <p></p>
+    <p>Para realizar comentarios más largos.<br/>
+    Los datos de un comentario o una sección DATA se pueden leer en la visualización del código fuente.</p>
+    <h2>Enlazar documentos e imágenes</h2>
+    <p>Ejemplos><a href="http://www.example.com/detailspecs.html">Details</a></p>
+    <img src="http://www.example.com/detail.jpg" alt="details">
+
 
 
   </body>
