actualización commit en henry

--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
     Los datos de un comentario o una sección DATA se pueden leer en la visualización del código fuente.</p>
     <h2>Enlazar documentos e imágenes</h2>
     <p>Ejemplos><a href="http://www.example.com/detailspecs.html">Details</a></p>
-    <img src="http://www.example.com/detail.jpg" alt="details">
+    <img src="http://www.example.com/detail.jpg" alt="details"/>
+    <p>Idiomas:<br/>
+    Ubica los codigos de idiomas en RFC1766 o en www.ietf.org/rfc/rfc1766.txt </p>
+    <h2>Dirección del texto:</h2>
+    <p>Usamos el atributo dir y el valor ltr o rtl</p>
+
 
 
 
