Bloques de contenido

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
     Ubica los codigos de idiomas en RFC1766 o en www.ietf.org/rfc/rfc1766.txt </p>
     <h2>Dirección del texto:</h2>
     <p>Usamos el atributo dir y el valor ltr o rtl</p>
+    <h2>Bloques de contenido</h2>
+    <pre>
+    <p> parrafo con formato</p> </pre>
 
 
 
