--- a/git.html
+++ b/git.html
@@ -7,6 +7,9 @@
   <body>
     <h1>Git</h1>
     <p>git clone "y la url del repositorio clona el repositorio"</p>
+    <p>.gitignore <br/>
+    y dentro de este archivo nombramos los archivos y carpetas a ignorar </p>
+
 
   </body>
 </html>
