--- a/index.html
+++ b/index.html
@@ -40,8 +40,20 @@
     <p>Usamos el atributo dir y el valor ltr o rtl</p>
     <h2>Bloques de contenido</h2>
     <pre>
-    <p> parrafo con formato</p> </pre>
+    <p> parrafo con formato</p>
+    <h1>Encabezados</h1>
+    <blockquote cite="http://">Citas </blockquote>
+    <ul>
+      <li>Lista</li>
+    </ul>
+    <center>
+    <div class=""></div>
 
+    </pre>
+    <dl class="list">
+      <dt></dt>
+
+    </dl>
 
 
 
