--- a/git.html
+++ b/git.html
@@ -6,9 +6,17 @@
   </head>
   <body>
     <h1>Git</h1>
-    <p>git clone "y la url del repositorio clona el repositorio"</p>
-    <p>.gitignore <br/>
-    y dentro de este archivo nombramos los archivos y carpetas a ignorar </p>
+    <p>Para clonar un repositorio remoto:<br/>
+    git clone https://www.github.com/hflores07/manual.git</p>
+    <p>Para ignorar archivos o carpetas:<br/>
+    creas en la carpeta del proyecto un archivo ".gitignore" y dentro de este archivo nombramos los archivos o carpetas a ignorar </p>
+    <p>Para que sirve:<br/>
+    git branch -M main </p>
+    <p>Para crear y extraer una nueva rama:<br/>
+    git checkout -b nueva_rama</p>
+    <p>Para crear y extraer una rama distinta del HEAD actual:<br/>
+    git checkout -b nueva_rama rama_existente </p>
+
 
 
   </body>
