--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
       <dt></dt>
 
     </dl>
+    <h2>Divisiones:</h2>
+    <p>Las divisiones se usan para agrupar diferentes
+    objetos en un contenedor más grande</p>
 
 
 
