--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Manual de HTML por Henry Flores</title>
+    <style media="screen">
+      .enfacis {
+                color:red;
+                text-decoration:underline;
+                font-weight:bold;
+                }
+    </style>
   </head>
   <body>
     <h2>Reglas aplicables a los atributos</h2>
@@ -26,7 +33,15 @@
     Se pueden aplicar estilos directamente sobre las etiquetas usando el atributo: style="style-definition; style-definition" </p>
     <h2>Texto y comentarios:</h2>
     <p>Los textos y comentarios permiten hacer más legible los documentos e incluyen información adicional que funciones futuras puedan acceder a ella.<br/>
-    Comentarios: "aqui"<br/>
+    Ejemplos de comentarios: <br/>
+    <p>&lt;!-- Este es un comentario --&#62;<br/>
+    &#60;!--Este es otro comentario con valores decimales y hexadecimales.--&#x3E;<br/>
+    <h1>&copy;</h1></p>
+    <ul>
+      <li>Código mnemotécnico (copy para el sأ­mbolo de copyright).</li>
+      <li>Valor decimal correspondiente al carácter(#169 para el símbolo de copyright).</li>
+      <li>Valor hexadecimal correspondiente al carácter (como #xA9 para el sí­mbolo de copyright).</li>
+    </ul>
     Los comentarios no se pueden anidar.</p>
     <h2>Sección CDATA</h2>
     <p>Para realizar comentarios más largos.<br/>
@@ -40,7 +55,7 @@
     <p>Usamos el atributo dir y el valor ltr o rtl</p>
     <h2>Bloques de contenido</h2>
     <pre>
-    <p> parrafo con formato</p>
+    <p> párrafo con formato</p>
     <h1>Encabezados</h1>
     <blockquote cite="http://">Citas </blockquote>
     <ul>
@@ -56,8 +71,26 @@
     </dl>
     <h2>Divisiones:</h2>
     <p>Las divisiones se usan para agrupar diferentes
-    objetos en un contenedor más grande</p>
+    objetos en un contenedor más grande.</p>
+    <h2>Elementos en líneas: Marcado de caracteres.</h2>
+    <p><b>(b) Negrita o bold</b><br/>
+    <i>(i) Cursiva o italic</i><br/>
+    <big> (big) Texto grande o big</big><br/>
+    <small>(small) Texto pequeño o small</small><br/>
+    <em>(em) Texto enfatizado</em><br/>
+    <strong>(strong) Texto fuerte</strong><br/>
+    <tt>(tt) Teletipo o mono espacio </tt><br/>
+    <strike> (strike) Tacha</strike><br/>
+    <u>(u) subrayada o underlined</u><br/>
+    <strike>(del, ins, font)</strike><br/>
+    <em>(em) Enfatizado o Emphasized</em></p>
 
+    <h2>Expandir texto:</h2>
+    <p><span class="enfacis">Las etiquetas (span) se utilizan para expandir estilos en uno o más caracteres o palabras en línea.</span>,
+    este texto no está، enfatizado.</p>
+    <h2>Caracteres especiales (Entidades)</h2>
+    <p>&#151;Guiones em.</p>
+    <h2>Elementos de organización:</h2>
 
 
   </body>
