--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
         <dd>Breve teoría y eiemplos de uso prácticos</dd>
       <dt>Próximos manuales</dt>
         <dd>Para futuros manuales y cursos en Youtube</dd>
+      <dt>Sección Matemáticas</dt>
+        <dd>Esta es una sección temporal para las matemáticas</dd>
 
     </dl>
 
-    <footer>Creado por Henry Flores en el 2018</footer>
+    <footer><center/> Creado por Henry Flores en el 2018</footer>
   </body>
 </html>
