--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <dd>Para futuros manuales y cursos en Youtube</dd>
       <dt>Sección Matemáticas</dt>
         <dd>Esta es una sección temporal para las matemáticas</dd>
-      <dt><a href="./nivel1/english.html"></a> Diccionario de Inglés</dt>
+      <dt><a href="./nivel1/english.html">Diccionario de Inglés</a></dt>
         <dd>Lista de palabras en inglés</dd>
 
     </dl>
