--- a/lenguajes/git.html
+++ b/lenguajes/git.html
@@ -10,6 +10,8 @@
     git clone https://www.github.com/hflores07/manual.git</p>
     <p>Para ignorar archivos o carpetas:<br/>
     creas en la carpeta del proyecto un archivo ".gitignore" y dentro de este archivo nombramos los archivos o carpetas a ignorar </p>
+    <p>Para descartar cambios en un directorio de trabajo:<br/>
+    git checkout -- nameOfFile </p>    
     <p>Para que sirve:<br/>
     git branch -M main </p>
     <p>Para crear y extraer una nueva rama:<br/>
