--- a/lenguajes/html.html
+++ b/lenguajes/html.html
@@ -96,7 +96,10 @@
     <h2>Caracteres especiales (Entidades)</h2>
     <p>&#151;Guiones em.</p>
     <h2>Elementos de organización:</h2>
-
+    <p>Tablas y formularios <br/>
+        Tablas: Presentan datos en formato de filas y columnas <br/>
+        Formularios: Recuperamos datos de una GUI (Interfaz gráfica de usuario)</p>
+        
 
   </body>
 </html>
