--- a/nivel1/english.html
+++ b/nivel1/english.html
@@ -19,7 +19,8 @@
       </ol>
 
     </details>
-    <p>Carpeta: Binder </p>
+    <p>Carpeta: Binder</p>
+    <p>Archivo: File</p>
 
   </body>
 </html>
