Corregido rotura en html.htLM

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>En esta página se irán agregando temas, manuales y sus ejemplos de uso en la práctica:</h1>
     <dl class="">
-      <dt><a href="./lenguajes/html.htlm">Manual de HTML</a></dt>
+      <dt><a href="./lenguajes/html.html">Manual de HTML</a></dt>
         <dd>Breve teoría y ejemplo de uso manteniendo en lo posible sus nombres en inglés.</dd>
       <dt>Manual de CSS</dt>
         <dd>Breve teoría y ejemplos de uso prácticos</dd>
