New file matematicas.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <dd>Breve teoría y eiemplos de uso prácticos</dd>
       <dt>Próximos manuales</dt>
         <dd>Para futuros manuales y cursos en Youtube</dd>
-      <dt>Sección Matemáticas</dt>
+      <dt><a href=">/nivel1/matematicas.html">Sección Matemáticas</a></dt>
         <dd>Esta es una sección temporal para las matemáticas</dd>
       <dt><a href="./nivel1/english.html">Diccionario de Inglés</a></dt>
         <dd>Lista de palabras en inglés</dd>
