Rotura en >/matematicas.html

--- a/nivel1/matematicas.html
+++ b/nivel1/matematicas.html
@@ -5,7 +5,10 @@
     <title>Sección Matemáticas</title>
   </head>
   <body>
-    
+    <ol>
+      <li><a href="./nivel2/geometria.html">Geometría básica</a> </li>
+      <li><a href="#">Aritmética</a> </li>
+    </ol>
 
   </body>
 </html>
