Contenido de geometria

--- a/lenguajes/html.html
+++ b/lenguajes/html.html
@@ -99,6 +99,9 @@
     <p>Tablas y formularios <br/>
         Tablas: Presentan datos en formato de filas y columnas <br/>
         Formularios: Recuperamos datos de una GUI (Interfaz gráfica de usuario)</p>
+    <h2>Rutas</h2>
+    <p>.. Directorio padre <br/>
+        Ejemplo: ../ (Busca a partir del directorio anterior al actual. Al directorio padre.)</p>
 
 
   </body>
