--- a/nivel1/matematicas.html
+++ b/nivel1/matematicas.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <ol>
-      <li><a href="./nivel2/geometria.html">Geometría básica</a> </li>
+      <li><a href="../nivel2/geometria.html">Geometría básica</a> </li>
       <li><a href="#">Aritmética</a> </li>
     </ol>
 
