--- a/nivel2/geometria.html
+++ b/nivel2/geometria.html
@@ -5,7 +5,7 @@
     <title>Geometría básica</title>
       </head>
   <body>
-    
+    <p>La geometría es el estudio de las propiedades y las figuras compuestas por líneas y puntos.</p>
 
   </body>
 </html>
