--- a/nivel2/geometria.html
+++ b/nivel2/geometria.html
@@ -5,7 +5,18 @@
     <title>Geometría básica</title>
       </head>
   <body>
-    <p>La geometría es el estudio de las propiedades y las figuras compuestas por líneas y puntos.</p>
+    <p>La geometría es el estudio de las propiedades y las figuras compuestas por líneas y puntos.
+        Geo ¬¬­­­&#x3E Tierra</p>
+    <p>Algunos tipos de figuras: <br/>
+        <ol>
+          <li><a href="#">Cuadrado</a></li>
+          <li><a href="#">Rectángulo</a></li>
+          <li><a href="#">Triángulo</a></li>
+          <li><a href="#">Círculo</a></li>
+          <li><a href="#">Los Ángulos</a></li>
+        </ol>
+    </p>
+
 
   </body>
 </html>
