--- a/nivel2/geometria.html
+++ b/nivel2/geometria.html
@@ -5,8 +5,16 @@
     <title>Geometría básica</title>
       </head>
   <body>
-    <p>La geometría es el estudio de las propiedades y las figuras compuestas por líneas y puntos.
-        Geo ¬¬­­­&#x3E Tierra</p>
+    <p>La geometría es el estudio de las propiedades y las figuras compuestas por líneas y puntos.<br/>
+        Geo ¬¬­­­&#x3E Tierra.<br/>
+        Metron ¬¬&#3E Medida.</p>
+    <p>Personajes:<br/>
+        Tales <br/>
+        Pitágoras <br/>
+        Euclides <br/>
+        La geometría plana solo trata de los elementos sobre un plano.
+    </p>
+
     <p>Algunos tipos de figuras: <br/>
         <ol>
           <li><a href="#">Cuadrado</a></li>
