geometria.html details

--- a/lenguajes/html.html
+++ b/lenguajes/html.html
@@ -58,9 +58,14 @@
     <p> párrafo con formato</p>
     <h1>Encabezados</h1>
     <blockquote cite="http://">Citas </blockquote>
+    
+    <p>Lista anidada en: </p>
+    <p>&#60; #60 details #x3E &#x3E;</p>
+    <p>&#60; #60 summary #x3E &#x3E;</p>
     <ul>
       <li>Lista</li>
     </ul>
+
     <p>Lista de definición o Definition list (dl), Definition term (dt), Definition description (dd)</p>
     <dl class="">
       <dt>Definition term o Término de definición</dt>
