--- a/nivel2/geometria.html
+++ b/nivel2/geometria.html
@@ -5,25 +5,48 @@
     <title>Geometría básica</title>
       </head>
   <body>
-    <p>La geometría es el estudio de las propiedades y las figuras compuestas por líneas y puntos.<br/>
-        Geo ¬¬­­­&#x3E Tierra.<br/>
-        Metron ¬¬&#3E Medida.</p>
-    <p>Personajes:<br/>
-        Tales <br/>
-        Pitágoras <br/>
-        Euclides <br/>
-        La geometría plana solo trata de los elementos sobre un plano.
-    </p>
+    <h1>La geometría es el estudio de las propiedades y las figuras compuestas por líneas y puntos.</h1>
+        <p>Geo ¬¬­­­&#x3E; Tierra. <br/>
+        Metron ¬¬&#x3E; Medida.</p>
 
-    <p>Algunos tipos de figuras: <br/>
-        <ol>
-          <li><a href="#">Cuadrado</a></li>
-          <li><a href="#">Rectángulo</a></li>
-          <li><a href="#">Triángulo</a></li>
-          <li><a href="#">Círculo</a></li>
-          <li><a href="#">Los Ángulos</a></li>
-        </ol>
-    </p>
+        <details open>
+          <summary>
+            Personajes:
+          </summary>
+          <ol>
+            <li>Tales.</li>
+            <li>Pitágoras.</li>
+            <li>Euclides.</li>
+          </ol>
+        </details>
+
+        <p>La geometría plana solo trata de los elementos sobre un plano.</p>
+
+    <h2>Conceptos básicos:</h2>
+    <h3>Punto y recta</h3>
+    <p>El punto y la recta no están definidos y se tratan intuitivamente. <br/>
+      El punto: La Huella que deja el lapiz sobre el papel. Se denota con una letra mayúscula<br/>
+      Ejemplo: C (Denota el punto c). <br/>
+      La recta: La unión de dos puntos determina una recta. Se denota con una letra minúscula
+      o las letras (mayúsculas) que representan a los puntos que la determinan <br/>
+      Ejemplo: recta l, 
+   </p>
+
+   <details open>
+     <summary>
+       Algunos tipos de figuras:
+     </summary>
+     <ol>
+       <li><a href="#">Cuadrado</a></li>
+       <li><a href="#">Rectángulo</a></li>
+       <li><a href="#">Triángulo</a></li>
+       <li><a href="#">Círculo</a></li>
+       <li><a href="#">Los Ángulos</a></li>
+     </ol>
+   </details>
+
+
+
 
 
   </body>
