geometria conceptos basicos

--- a/lenguajes/html.html
+++ b/lenguajes/html.html
@@ -58,7 +58,7 @@
     <p> párrafo con formato</p>
     <h1>Encabezados</h1>
     <blockquote cite="http://">Citas </blockquote>
-    
+
     <p>Lista anidada en: </p>
     <p>&#60; #60 details #x3E &#x3E;</p>
     <p>&#60; #60 summary #x3E &#x3E;</p>
@@ -95,7 +95,7 @@
     <strike>(del, ins, font)</strike><br/>
     <em>(em) Enfatizado o Emphasized</em></p>
 
-    <h2>Expandir texto:</h2>
+    <h2>Expandir texto: (span)</h2>
     <p><span class="enfacis">Las etiquetas (span) se utilizan para expandir estilos en uno o más caracteres o palabras en línea.</span>,
     este texto no está، enfatizado.</p>
     <h2>Caracteres especiales (Entidades)</h2>
