--- a/nivel2/geometria.html
+++ b/nivel2/geometria.html
@@ -23,14 +23,33 @@
         <p>La geometría plana solo trata de los elementos sobre un plano.</p>
 
     <h2>Conceptos básicos:</h2>
-    <h3>Punto y recta</h3>
+    <h3>Punto y recta:</h3>
     <p>El punto y la recta no están definidos y se tratan intuitivamente. <br/>
       El punto: La Huella que deja el lapiz sobre el papel. Se denota con una letra mayúscula<br/>
       Ejemplo: C (Denota el punto c). <br/>
       La recta: La unión de dos puntos determina una recta. Se denota con una letra minúscula
       o las letras (mayúsculas) que representan a los puntos que la determinan <br/>
-      Ejemplo: recta l, 
+      Ejemplo: recta l, recta AB,
+      <span style="cellpadding:1">
+      <img src="../images/symbol-line-ab.gif" alt="recta-AB" height="22" weight="15" width="1%">
+      </span>
+
+      <!-- <span style="text-decoration:overline">AB</span>, o simplemente AB. -->
    </p>
+   <h3>Semirecta y ángulo:</h3>
+   <p>Semirecta: La unión del origen y un punto "B" en la recta (hacia donde se dirige) determinan la
+     Semirecta <img src="../images/symbol-ray-ab.gif" alt="rayo AB" height="22" weight="15" width="1%">
+     <br/>
+     <!-- <span style="text-decoration:overline">OB</span>. <br/> -->
+     Ángulo: Es la unión de dos semirectas que tienen el origen o punto en común. <br/>
+     Ejemplo: &#60;AOB, &omega;, &Omega;, etc.
+   </p>
+   <h3>Otros conceptos básicos:</h3>
+   <p>Si tenemos dos puntos pertenecientes a la recta, existe un tercer punto que está en medio de
+     ellos. Se denota: A-C-B (El punto C está entre A y B).
+   </p>
+   <h3>Segmento de recta</h3>
+
 
    <details open>
      <summary>
@@ -44,7 +63,6 @@
        <li><a href="#">Los Ángulos</a></li>
      </ol>
    </details>
-
 
 
 
