cambios al head.html

--- a/lenguajes/head.html
+++ b/lenguajes/head.html
@@ -2,9 +2,26 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Elementos de encabezado</title>
+    <title>Elementos de encabezado &reg</title>
   </head>
   <body>
-    <h1>Hola a todos</h1>
+    <h1>Capítulo 4</h1>
+    <h2>Especificar el título del documento</h2>
+    <p>La sección &#60; #60; head #x3E; &#x3E; de un documento HTML contiene otros elementos,
+      como por ejemplo el título del documento.</p>
+    <h2>Facilitar información a los motores de búsqueda</h2>
+    <p>La sección &#60;head&#x3E; del documento también puede incluir etiquetas &#60;meta&#x3E;,
+      las cuales no aparecen como texto visible en el documento, sino que se utilizan para enviar
+      información y comandos al navegador del cliente.</p>
+    <p>Como su nombre lo sugiere, la etiqueta &#60;meta&#x3E; contiene información sobre el
+      documento. Se trata de datos sobre el propio documento, no sobre su contenido.
+      La mayor parte de la información meta la genera el servidor Web que lo presenta.
+      Sin embargo, con las metaetiquetas podemos facilitar información diferente o bien
+      adicional sobre el documento.
+    </p>
+    <p>Podemos especificar en ella gran cantidad de información. Si utilizamos el parámetro HTTP-EQUIV
+      en la etiqueta &#60;meta&#x3E;,podemos incluir o sustituir la información del encabezado de HTTP.
+
+    </p>
   </body>
 </html>
