--- a/nivel2/geometria.html
+++ b/nivel2/geometria.html
@@ -49,6 +49,20 @@
      ellos. Se denota: A-C-B (El punto C está entre A y B).
    </p>
    <h3>Segmento de recta</h3>
+   <p>Dados dos puntos distintos A y B de una recta, el conjunto formado por todos los puntos
+    entre A y B, se llama <strong>segmento de recta</strong> y se denota
+     <span style="text-decoration:overline">AB</span>.
+ </p>
+ <h3>Puntos colineales:</h3>
+ <p>Son los puntos que están sobre una misma recta</p>
+ <p>Ejemplos:</p>
+ <span><strike><u>.      .</u></strike></span>
+ <p>&#60;--.A--.B--&#x3E;</p>
+ <h3>Plano:</h3>
+ <p>Se denotan con letras griegas. Ejemplo (&#928;) PI (#928;) </p>
+ <p>Ejemplos: El suelo terrestre pero de extensión infinita</p>
+ <h3>Nuevos conceptos:</h3>
+ <p>Por dos puntos distintos pasa únicamente una sola recta.</p>
 
 
    <details open>
