cambio al index

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 
     </dl>
 
-    <footer><center/> Creado por Henry Flores en el 2018</footer>
+    <footer><center/> Creado por Henry Flores en el 2018 &copy;</footer>
   </body>
 </html>
