--- a/lenguajes/git.html
+++ b/lenguajes/git.html
@@ -9,7 +9,8 @@
     <p>Para clonar un repositorio remoto:<br/>
     git clone https://www.github.com/hflores07/manual.git</p>
     <p>Para ignorar archivos o carpetas:<br/>
-    creas en la carpeta del proyecto un archivo ".gitignore" y dentro de este archivo nombramos los archivos o carpetas a ignorar </p>
+    creas en la carpeta del proyecto un archivo ".gitignore" y <br/>
+     dentro de este archivo nombramos los archivos o carpetas a ignorar </p>
     <p>Para descartar cambios en un directorio de trabajo:<br/>
     git checkout -- nameOfFile </p>
     <p>Para que sirve:<br/>
@@ -24,6 +25,10 @@
       git config --global user.email usuario_@correo
     </p>
     <p>Para fusionar los cambios con la rama master, main, etc <br/>
+      Las fusiones pueden ser fast-fordware (simples y automáticas. Pasa
+      cuando trabajas con archivos y lineas de codigo distintas). <br/>
+      Manual merge (largo y manual. Pasa cuando se trabaja sobre el mismo
+      archivo y lineas de código). <br/>
       desde la rama que absorverá los cambios: <br/>
       git merge rama_de_procedencia_de_cambios
     </p>
@@ -33,6 +38,7 @@
       git remote -v (Ver links de repositorios remotos) <br/>
       git push -u origin master
     </p>
+
 
 
 
