--- a/nivel1/english.html
+++ b/nivel1/english.html
@@ -22,6 +22,9 @@
     <p>Carpeta: Binder</p>
     <p>Archivo: File</p>
     <p>Sobre: Over</p>
+    <p>Widget: gadget: truco: máquina</p>
+    <p>Commit: Cometer: Hacer (Do,make, ask, be, cause)</p>
+    <p id="shortcut">shorcut: Atajo, acceso directo</p>
 
   </body>
 </html>
