--- a/lenguajes/level1/reset.html
+++ b/lenguajes/level1/reset.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Ejeplos de "git reset --soft hash_del_commit"</h1>
+    <h1>Ejemplos de "git reset --soft hash_del_commit"</h1>
     <p id="resetsoft">git reset --soft hash_del_commit</p>
-    <h1>Ejelmplo de "git reset --mixed hash_del_commit"</h1>
+    <h1>Ejemplos de "git reset --mixed hash_del_commit"</h1>
     <p id="resetmixed">git reset --mixed hash_del_commit</p>
     <h1>Ejemplos de "git reset --hard hash_del_commit" </h1>
     <p id="resethard">git reset --hard hash_del_commit</p>
