gramatica spanish english

--- a/nivel1/english.html
+++ b/nivel1/english.html
@@ -19,12 +19,17 @@
       </ol>
 
     </details>
+    <p><a href="./grammar/egarmmar.html">Gramática del Inglés</a></p>
     <p>Carpeta: Binder</p>
     <p>Archivo: File</p>
     <p>Sobre: Over</p>
     <p>Widget: gadget: truco: máquina</p>
     <p>Commit: Cometer: Hacer (Do,make, ask, be, cause)</p>
     <p id="shortcut">shorcut: Atajo, acceso directo</p>
+    <p>Gramática: Grammar</p>
+    <p>look: S. mirada, cara, V. mirar, buscar, ver, observar</p>
+    <p>further: V. promover, adelantar Av. además, más allá Adj. adicional, nuevo</p>
+    <p>his: Adj. su, sus, de su Pn. su, sus, suyo, suya, de él</p>
 
   </body>
 </html>
