cambio a index excel 365

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <dd>Esta es una sección temporal para las matemáticas</dd>
       <dt><a href="./nivel1/english.html">Diccionario de Inglés</a></dt>
         <dd>Lista de palabras en inglés</dd>
+      <dt><a href="./programs/excel2016.html">Manual de Excel 365</a></dt>
+        <dd>Primer manual de excel 365 nivel básico</dd>
 
     </dl>
 
