--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <dd>Breve teoría y ejemplo de uso manteniendo en lo posible sus nombres en inglés.</dd>
       <dt>Manual de CSS</dt>
         <dd>Breve teoría y ejemplos de uso prácticos</dd>
-      <dt>Manual de JavaScrip</dt>
+      <dt><a href="./lenguajes/javascript.html">Manual de JavaScrip</a></dt>
         <dd>Breve teoría y ejemplos de uso prácticos</dd>
       <dt><a href="./lenguajes/git.html">Manual de git</a></dt>
         <dd>Breve teoría y eiemplos de uso prácticos</dd>
