--- a/nivel1/english.html
+++ b/nivel1/english.html
@@ -20,6 +20,12 @@
 
     </details>
     <p><a href="./grammar/egarmmar.html">Gramática del Inglés</a></p>
+    <p>"i.e" y "e.g": qué significan y cómo usarlos. (i.e) es la sigla de
+      "id est" "es decir", "that is to say", "that is"
+    </p>
+    <p>
+      "e.g": "por ejemplo" , "for example"
+    </p>
     <p>Carpeta: Binder</p>
     <p>Archivo: File</p>
     <p>Sobre: Over</p>
@@ -30,6 +36,15 @@
     <p>look: S. mirada, cara, V. mirar, buscar, ver, observar</p>
     <p>further: V. promover, adelantar Av. además, más allá Adj. adicional, nuevo</p>
     <p>his: Adj. su, sus, de su Pn. su, sus, suyo, suya, de él</p>
+    <p>greatest: Adv. , Adj. </p>
+    <p>Worthy: Adj. Digno, meritorio, loable S. </p>
+    <p>Thus: Adv. Por lo tanto, así, en consecuencia, tan</p>
+                                                        <p>Keep: V. Mantener, tener, guardar, conservar</p>
+    <p>Discard: V. Descartar, desechar S. Desecho, descarte</p>
+    <p>Age: S. Edad V. Embejecer</p>
+    <p>Old: Adj. Viejo, antiguo, S. Viejo, mayor </p>
+    <p>Length: S. Longitud, largo, tramo</p>
+    <p>Sloppy: Adj. Descuidado, poco riguroso</p>
 
   </body>
 </html>
