--- a/nivel1/grammar/everbs.html
+++ b/nivel1/grammar/everbs.html
@@ -36,6 +36,12 @@
         <tr><td>YOU</td><td>state</td></tr>
         <tr><td>THEY</td><td>state</td></tr>
     </table>
+    <p>
+        seek (buscar), sought, seeking, sought, seeks.
+    </p>
+    <p>
+        
+    </p>
 </head>
 <body>
     
