--- a/nivel1/translations/unix/wdebian.html
+++ b/nivel1/translations/unix/wdebian.html
@@ -21,7 +21,14 @@
           (especialmente los del proyecto GNU) y el kernel de linux.
         </p>
     <p>Cuando creó Debian, en 1993, bajo el liderazgo de la FSF, Ian Murdock tenía objetivos
-        claros, que expresó en el Manifiesto de Debian. El sistema operativo libre </p>
+        claros, que expresó en el Manifiesto de Debian. El sistema operativo libre que buscaba 
+        tendría que tener dos caraterísticas principales. Primera, Debian (estaría desarrolado 
+        / se desarrolaría) con el mayor  cuidado, para ser digno del kernel de Linux. también 
+        sería una distribución no comercial, suficientemente aceptable para competir 
+        con las mejores distribuciones comerciales. Esta doble ambición, a sus ojos, solo se 
+        lograría abriendo el proceso de desarrollo de Debian al igual que el de Linux y el 
+        proyecto GNU. Por lo tanto,
+    </p>
 
     
 </body>
