cmd repositorio_remoto

--- a/lenguajes/git.html
+++ b/lenguajes/git.html
@@ -90,6 +90,16 @@
       git remote -v (Ver links de repositorios remotos) <br/>
       git push -u origin master / git push origin master
     </p>
+    <p>Para remover el repositorio remoto: <br/>
+        git remote remove origin
+    </p>
+    <p>Para ver el repositorio remoto:<br/>
+      git remote -v
+    </p>
+    <p>Para agregar repositorios remotos:<br/>
+      git remote add codigo_HAS_del_repositorio_remoto
+    </p>
+    <p></p>
 
 
 
