cmd cambios_de_local_a_remoto

--- a/lenguajes/git.html
+++ b/lenguajes/git.html
@@ -99,7 +99,10 @@
     <p>Para agregar repositorios remotos:<br/>
       git remote add codigo_HAS_del_repositorio_remoto
     </p>
-    <p></p>
+    <p>Para traeros los commits o cambios de los colaboradores (subidos a GItHUB) a local:<br/>
+      git fetch origin <br/>  
+      git merge origin/master
+    </p>
 
 
 
