comando_cambiar_mensaje_de_ultimo_commit

--- a/lenguajes/git.html
+++ b/lenguajes/git.html
@@ -103,6 +103,9 @@
       git fetch origin <br/>  
       git merge origin/master
     </p>
+    <p>Para cambiar el mensaje del último commit:<br/>
+      git commit --amend -m 'mensaje_a_cambiar'
+    </p>
 
 
 
