--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <dl class="">
       <dt><a href="./lenguajes/html.html">Manual de HTML</a></dt>
         <dd>Breve teoría y ejemplo de uso manteniendo en lo posible sus nombres en inglés.</dd>
-      <dt>Manual de CSS</dt>
+      <dt><a href="./lenguajes/css.html">Manual de CSS</a></dt>
         <dd>Breve teoría y ejemplos de uso prácticos</dd>
       <dt><a href="./lenguajes/javascript.html">Manual de JavaScrip</a></dt>
         <dd>Breve teoría y ejemplos de uso prácticos</dd>
