contenido nuevo de inglés

--- a/lenguajes/javascript.html
+++ b/lenguajes/javascript.html
@@ -77,5 +77,10 @@
     </p><a href="https://asecuritysite.com/coding/asc2">Tabla utf-16</a>
     <p>String.prototype.concat(str[, ...strN])</p>
     <p>Qué es un operador.</p>
+    <h2>¿Qué es un evento?</h2>
+    <p>
+      Son la manera que tenemos en Javascript de controlar las acciones de los visitantes y definir un comportamiento de la página cuando 
+      se produzcan.
+    </p>
   </body>
 </html>
