--- a/nivel1/english.html
+++ b/nivel1/english.html
@@ -45,6 +45,12 @@
     <p>Old: Adj. Viejo, antiguo, S. Viejo, mayor </p>
     <p>Length: S. Longitud, largo, tramo</p>
     <p>Sloppy: Adj. Descuidado, poco riguroso</p>
+    <p>Lot : S. Lote, Adv. Mucho, bastante,muchísimo, V. Coleccionar</p>
+    <p>Backward : Adj. Hacia atrás, Adv. Hacia atrás, al reves, de espalda</p>
+    <p>Forward : V. Reenviar, enviar, avanzar, Adv. Adelante, Adj. Delantero, avanzado</p>
+    <p>Label S. Etiqueta, V. Etiquetar, calificar</p>
+    <p>As Adv. Como, mientas, ya que, lo que, donde, Conjugación. de, mientras, cuando, Preposición por, como</p>
+    <p></p>
 
   </body>
 </html>
