--- a/nivel1/grammar/everbs.html
+++ b/nivel1/grammar/everbs.html
@@ -40,8 +40,9 @@
         seek (buscar), sought, seeking, sought, seeks.
     </p>
     <p>
-        
+        owe (deber), tener deudas.
     </p>
+    <p></p>
 </head>
 <body>
     
