--- a/nivel1/grammar/sverbs.html
+++ b/nivel1/grammar/sverbs.html
@@ -15,5 +15,14 @@
         linea las interjecciones también expresan por sí mismas una idea.
         https://debian-handbook.info/browse/stable/the-debian-project.html#sect.what-is-debian
     </p>
+    <h1>GLOSSARY</h1>
+    <h2>Glorasio de términos gramaticales</h2>
+    <p>ACTIVA: De las dos voces del sistema verbal la voz activa es la forma más común,
+        como en Pedro la atiende. Su forma opuesta es la voz pasiva (Ella 'es atendida' por Pedro).
+    </p>
+    <p>AUXILIAR: Los auxiliares se utilizan para formar los tiempos compuestos de otros verbos, [ 
+        e.g. (exempli gratia - Por ejemplo)] en he has gone (Se ha ido) has y ha son los "verbos 
+        auxiliares".</p>
+    <p></p>
 </body>
 </html>
