Corregí enlace a verbos en ingles

--- a/nivel1/english.html
+++ b/nivel1/english.html
@@ -20,7 +20,7 @@
 
     </details>
     <p><a href="./grammar/egarmmar.html">Gramática del Inglés</a></p>
-    <p><a href=".grammar/everbs.html">Verbos en Inglés</a></p>
+    <p><a href="./grammar/everbs.html">Verbos en Inglés</a></p>
     <p>"i.e" y "e.g": qué significan y cómo usarlos. (i.e) es la sigla de
       "id est" "es decir", "that is to say", "that is"
     </p>
