Nuevos enlaces a inglés

--- a/nivel1/english.html
+++ b/nivel1/english.html
@@ -19,8 +19,9 @@
       </ol>
 
     </details>
-    <p><a href="./grammar/egarmmar.html">Gramática del Inglés</a></p>
+    <p><a href="./grammar/egrammar.html">Gramática del Inglés</a></p>
     <p><a href="./grammar/everbs.html">Verbos en Inglés</a></p>
+    <p><a href="./grammar/sverbs.html">Verbos en Español e Inglés</a></p>
     <p>"i.e" y "e.g": qué significan y cómo usarlos. (i.e) es la sigla de
       "id est" "es decir", "that is to say", "that is"
     </p>
