Nuevos cursos como PUG

--- a/index.html
+++ b/index.html
@@ -18,14 +18,29 @@
         <dd>Breve teoría y ejemplos de uso prácticos</dd>
       <dt><a href="./lenguajes/git.html">Manual de git</a></dt>
         <dd>Breve teoría y eiemplos de uso prácticos</dd>
-      <dt>Próximos manuales</dt>
-        <dd>Para futuros manuales y cursos en Youtube</dd>
       <dt><a href="./nivel1/matematicas.html">Sección Matemáticas</a></dt>
         <dd>Esta es una sección temporal para las matemáticas</dd>
       <dt><a href="./nivel1/english.html">Diccionario de Inglés</a></dt>
         <dd>Lista de palabras en inglés</dd>
       <dt><a href="./programs/excel2016.html">Manual de Excel 365</a></dt>
         <dd>Primer manual de excel 365 nivel básico</dd>
+      <dt> <strong style=color:red> Próximos manuales </strong></dt>
+        <dd><a href="#">Para futuros manuales y cursos en Youtube</a> </dd>
+        <dd><a href="./programs/pug.html">Comando básicos de PUG</a></dd>
+        <dd><a href="./programs/gnulinux.html">Comando básicos de GNU/Linux</a></dd>
+        <dd><a href="./programs/electronics.html">Fundamentos de electrónica</a></dd>
+      <dt>
+        <details>
+            <summary>
+              Proyectos
+            </summary>
+              <ul>
+                <li><a href="#">Apps para ANDROID</a></li>
+                <li><a href="#">Apps para IPHONE</a></li>
+              </ul>
+        </details>
+        
+      </dt>
 
     </dl>
 
